# cproject

./: .gitignore  CMakeLists.txt  ReadMe.md
Main/: CMakeLists.txt
Main/MyApp/: CMakeLists.txt  Main.cpp
Main/MyLib/: CMakeLists.txt  MyClass.cpp  MyClass.h
Main/app/: app.cpp
Main/myapp/: CMakeLists.txt  app.cpp  main.cpp
Main/mylib/: CMakeLists.txt  array.cpp  array.h  base.cpp  base.h  fmath.h  functor.cpp  functor.h  impl.h  number.cpp  number.h  str.h  test.cpp  var.cpp  var.h
Main/mylib/jsc/: array.h  bigint.h  c17.hpp  console.h  functor.h  functorImpl.h  impl.h  js.h  json.h  number.h  object.h  str.h  test.h  var.h
Main/mylib/src/: array.cpp  arrayImpl.h  c17.hpp  console.cpp  functor.cpp  functorImpl.h  implPool.h  json.cpp  number.cpp  numberImpl.h  object.cpp  objectImpl.h  str.cpp  strImpl.h  test.cpp  valueImplPool.h  var.cpp
Scripts/: build_debug.sh  build_emscripten_debug.sh  install_thirdparty.sh  install_tools.sh
UnitTest/: CMakeLists.txt  case1.cpp
cmake/: Common.cmake  Find3DSMAX.cmake  FindFBX.cmake
doc/: index.md
examples/: CMakeLists.txt
examples/base64/: boost_base64.hpp  macaron_base64.hpp
examples/base64/cutils/: base64.cpp  base64.h
examples/cgal/: CMakeLists.txt  cgal.cpp  cgalqt5.cpp
examples/csharp/lib/: CMakeLists.txt
examples/csharp/wpf/: CMakeLists.txt
examples/dropfile/: CMakeLists.txt  main.cpp
examples/e1/: CMakeLists.txt
examples/eigen/: CMakeLists.txt  main.cpp
examples/fbxsdk/: CMakeLists.txt  fbxcontext.h  main.cpp
examples/fbxsdk/ImportScene/: CMakeLists.txt  main.cxx
examples/fbxsdk/export/: CMakeLists.txt  fbxcontext.h  main.cpp
examples/fbxsdk/viewer/: CMakeLists.txt
examples/immer/: CMakeLists.txt  main.cpp
examples/json/: CMakeLists.txt
examples/maxplugin/foo/: 3dsmaxsdk.h  CMakeLists.txt  DllEntry.cpp  DllEntry.h  FooMaxPlugin.cpp  FooMaxPlugin.h  plugin.def  plugin.rc  resources.h
examples/maxplugin/jsonexp/: CMakeLists.txt  dllDefine.def  dllMain.cpp  jsonexp.cpp  jsonexp.h  maxHeaders.h  resource.aps  resource.h  resource.rc  veroverrides.h
examples/maxplugin/jsonexp/kernel/: asciitok.h  export.cpp  export.h  format.h  fstring.cpp  fstring.h  json.h
examples/maxtool/: CMakeLists.txt  language.cpp  language.h  main.cpp  string_utils.cpp  string_utils.h
examples/maxtool/base/: main.cpp
examples/maxtool/opt0/: main.cpp
examples/maxtool/opt1/: main.cpp
examples/maxtool/opt2/: base64.h  main.cpp
examples/maxtool/opt3/: main.cpp
examples/maxtool/tinyxml2/: tinyxml2.h
examples/myutil/: common.cpp  common.h
examples/qt5/: CMakeLists.txt
examples/sqlite/: CMakeLists.txt  main.cpp
examples/stg/: CMakeLists.txt  main.cpp
examples/storage/: storage.cpp
examples/test/: main.cpp  profile_builder.cpp  profile_builder.h
examples/tinyxml/: CMakeLists.txt  main.cpp
examples/usnjournal/: CMakeLists.txt  README.md  main.cpp
examples/xml/: CMakeLists.txt  main.cpp
main/app/: CMakeLists.txt
main/lib/: CMakeLists.txt
main/myapp/: loopbuilder.cpp  loopbuilder.h
main/mylib/: my_class.cpp  my_class.h
test/: CMakeLists.txt  case.cpp  main.cpp
